Backported compats from 1.19 to 1.16.5