@@ -4,20 +4,16 @@ import net.minecraft.client.renderer.model.ModelResourceLocation;
 import net.minecraft.command.Commands;
 import net.minecraft.item.ItemGroup;
 import net.minecraft.item.ItemStack;
+import net.minecraft.util.ResourceLocation;
 import net.minecraftforge.api.distmarker.Dist;
 import net.minecraftforge.api.distmarker.OnlyIn;
 import net.minecraftforge.client.event.ModelBakeEvent;
-import net.minecraftforge.client.model.ModelLoadingException;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
-import net.minecraftforge.fml.DistExecutor;
-import net.minecraftforge.fml.ModContainer;
-import net.minecraftforge.fml.ModList;
+import net.minecraftforge.fml.*;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.fml.common.Mod.EventBusSubscriber;
 import net.minecraftforge.fml.common.Mod.EventBusSubscriber.Bus;
-import net.minecraftforge.fml.event.lifecycle.FMLClientSetupEvent;
-import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
-import net.minecraftforge.fml.event.lifecycle.FMLLoadCompleteEvent;
+import net.minecraftforge.fml.event.lifecycle.*;
 import net.minecraftforge.fml.event.server.FMLServerStartingEvent;
 import net.minecraftforge.fml.javafmlmod.FMLJavaModLoadingContext;
 import net.minecraftforge.fml.loading.FMLPaths;
@@ -37,10 +33,7 @@ import org.zeith.solarflux.panels.SolarPanels;
 import org.zeith.solarflux.proxy.SFRClientProxy;
 import org.zeith.solarflux.proxy.SFRCommonProxy;
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.InvocationTargetException;
-import java.util.ArrayList;
-import java.util.List;
+import java.util.*;
 import java.util.function.Consumer;
 
 @Mod("solarflux")
@@ -56,72 +49,78 @@ public class SolarFlux
 			return new ItemStack(ItemsSF.PHOTOVOLTAIC_CELL_3);
 		}
 	};
-
+	public static final String MOD_ID = "solarflux";
+	
 	private static final List<ISFCompat> COMPATS = new ArrayList<>();
-
+	
 	public SolarFlux()
 	{
 		FMLJavaModLoadingContext.get().getModEventBus().register(this);
-
+		
 		LanguageAdapter.registerMod("solarflux");
-
-		for(Class<? extends ISFCompat> type : ScanDataHelper.lookupAnnotatedTypes(SFCompat.class, ISFCompat.class))
+		
+		SolarPanels.init();
+		
+		for(ScanDataHelper.ModAwareAnnotationData scan : ScanDataHelper.lookupAnnotatedObjects(SFCompat.class))
 		{
-			SFCompat sfc = type.getDeclaredAnnotation(SFCompat.class);
-			if(ModList.get().isLoaded(sfc.value()))
+			String modid = Objects.toString(scan.getProperty("value").orElse(null));
+			if(ModList.get().isLoaded(modid))
 			{
-				LOG.info("Added " + ModList.get().getModContainerById(sfc.value()).map(ModContainer::getModInfo).map(IModInfo::getDisplayName).orElse(sfc.value()) + " compatibility to Solar Flux.");
 				try
 				{
-					Constructor<? extends ISFCompat> cmp = type.getDeclaredConstructor();
-					cmp.setAccessible(true);
-					ISFCompat compat = cmp.newInstance();
+					ISFCompat compat = scan.getOwnerClass().asSubclass(ISFCompat.class).getDeclaredConstructor().newInstance();
+					compat.construct();
 					COMPATS.add(compat);
-					compat.setupConfigFile(FMLPaths.CONFIGDIR.get().resolve("solarflux").resolve("compat").resolve(sfc.value() + ".hlc").toFile());
-				} catch(InstantiationException | IllegalAccessException | InvocationTargetException | NoSuchMethodException e)
+					compat.setupConfigFile(FMLPaths.CONFIGDIR.get().resolve("solarflux").resolve("compat").resolve(modid + ".hlc").toFile());
+					LOG.info("Added " + ModList.get().getModContainerById(modid).map(ModContainer::getModInfo).map(IModInfo::getDisplayName).orElse(modid) + " compatibility to Solar Flux.");
+				} catch(Throwable e)
 				{
-					throw new ModelLoadingException(e.getMessage(), e);
+					e.printStackTrace();
 				}
 			}
 		}
-
-		SolarPanels.init();
+		
 		processCompats(ISFCompat::registerPanels);
 		ResourcePackAdapter.registerResourcePack(SolarFluxResourcePack.getPackInstance());
 	}
-
+	
+	public static ResourceLocation id(String s)
+	{
+		return new ResourceLocation(MOD_ID, s);
+	}
+	
 	@SubscribeEvent
 	public void commonSetup(FMLCommonSetupEvent e)
 	{
 		PROXY.commonSetup();
 		SFNetwork.init();
 	}
-
+	
 	@SubscribeEvent
 	public void loadComplete(FMLLoadCompleteEvent e)
 	{
 		SolarPanels.refreshConfigs();
 	}
-
+	
 	@SubscribeEvent
 	@OnlyIn(Dist.CLIENT)
 	public void clientSetup(FMLClientSetupEvent e)
 	{
 		PROXY.clientSetup();
 	}
-
+	
 	@SubscribeEvent
 	@OnlyIn(Dist.CLIENT)
 	public void modelBake(ModelBakeEvent e)
 	{
 		SolarPanels.listPanelBlocks().forEach(spb -> e.getModelRegistry().put(new ModelResourceLocation(spb.getRegistryName(), ""), new SolarPanelBakedModel(spb)));
 	}
-
+	
 	public static void processCompats(Consumer<ISFCompat> handler)
 	{
 		COMPATS.forEach(handler);
 	}
-
+	
 	@EventBusSubscriber(bus = Bus.FORGE)
 	public static class Registration
 	{
